@@ -1,3 +1,8 @@
+2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Projects/DotNetProject.cs: Sanitise autogenerated default
+	  namespaces properly.
+
 2008-06-17  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Projects.Dom/DomReturnType.cs,
